--- a/ObligatorioTTec/ObligatorioTTec/ObligatorioTTec.csproj
+++ b/ObligatorioTTec/ObligatorioTTec/ObligatorioTTec.csproj
@@ -66,6 +66,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="UserPanel.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Login.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
